force-app/main/default/objects/Activity/fields/Blocked_By__c.field-meta.xml
<CustomField>
    <fullName>Blocked_By__c</fullName>
    <description>Wire-fraud prerequisite gate (Story 28), Phase 0. NOT a lookup - Lookup(Task) is undeployable on this org ("referenceTo value of 'Task' does not resolve to a valid sObject type"), so this holds the prerequisite item's Group_Letter__c + '|' + Task_Sequence__c key (e.g. 'B|2'), matched against sibling Tasks sharing the same Transaction_Deal__c. WRITTEN IN TWO PLACES, BOTH REQUIRED: TaskFanoutService's hardcoded pair map (B3-&gt;B2, I8-&gt;I7) stamps it at Day-0 fan-out for new deals; scripts/backfill-task-blocked-by.apex stamps it once for deals that predate this field. Drop either and half the population is silently ungated. Transaction_Task_Def__mdt has no column to drive this generically yet - that generalisation is Phase 1. Blank means no prerequisite. Read by the before-update prerequisite gate, which resolves the SURVIVING key (new value, else prior) so blanking this field in the same save as a completion does not bypass the gate.</description>
    <inlineHelpText>Group+sequence key (e.g. B|2) of the checklist item that must be completed first. Blank if this item has no prerequisite.</inlineHelpText>
    <label>Blocked By</label>
    <length>20</length>
    <type>Text</type>
</CustomField>