force-app/main/default/objects/Activity/fields/Blocked_Reason__c.field-meta.xml
<CustomField>
    <fullName>Blocked_Reason__c</fullName>
    <label>Blocked Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>