force-app/main/default/objects/Activity/fields/Conditional__c.field-meta.xml
<CustomField>
    <fullName>Conditional__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Conditional</label>
    <type>Checkbox</type>
</CustomField>