force-app/main/default/objects/Activity/fields/Inbound_Message_Id__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Message_Id__c</fullName>
    <externalId>true</externalId>
    <label>Inbound Message ID</label>
    <length>255</length>
    <description>RFC Message-ID from the inbound email — idempotency key and reply threading</description>
    <type>Text</type>
</CustomField>