force-app/main/default/objects/Activity/fields/Onboarding__c.field-meta.xml
<CustomField>
    <fullName>Onboarding__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Onboarding</label>
    <referenceTo>Onboarding__c</referenceTo>
    <relationshipLabel>Checklist Tasks</relationshipLabel>
    <relationshipName>Checklist_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>