force-app/main/default/objects/Activity/fields/Onboarding_Category__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Category__c</fullName>
    <label>Onboarding Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Property Set up</fullName>
            </value>
            <value>
                <fullName>Unit &amp; Tenant Setup</fullName>
            </value>
            <value>
                <fullName>Vendor &amp; Expense Management</fullName>
            </value>
            <value>
                <fullName>NNN Reconciliation &amp; Billing Setup</fullName>
            </value>
            <value>
                <fullName>Tenant Communication &amp; Transition</fullName>
            </value>
            <value>
                <fullName>Performance Tracking</fullName>
            </value>
            <value>
                <fullName>Leasing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>