force-app/main/default/objects/Activity/fields/Task_Group__c.field-meta.xml
<CustomField>
    <fullName>Task_Group__c</fullName>
    <label>Task Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A. Contract Execution &amp; Title Opening</fullName>
            </value>
            <value>
                <fullName>B. Earnest Money Wire</fullName>
            </value>
            <value>
                <fullName>C. Property Condition Report (BBG)</fullName>
            </value>
            <value>
                <fullName>D. LPRD Cash Flow Verification</fullName>
            </value>
            <value>
                <fullName>E. Appraisal</fullName>
            </value>
            <value>
                <fullName>F. Loan Package &amp; Financing</fullName>
            </value>
            <value>
                <fullName>G. Insurance</fullName>
            </value>
            <value>
                <fullName>H. Entity Formation &amp; Investor Relations</fullName>
            </value>
            <value>
                <fullName>H2. Tenant Interviews &amp; Estoppels</fullName>
            </value>
            <value>
                <fullName>I. Pre-Closing &amp; Closing</fullName>
            </value>
            <value>
                <fullName>J. Post-Closing Checklist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>