force-app/main/default/objects/Activity/fields/Task_Owner_Label__c.field-meta.xml
<CustomField>
    <fullName>Task_Owner_Label__c</fullName>
    <label>Owner Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>