force-app/main/default/objects/Activity/fields/Task_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Task_Sequence__c</fullName>
    <label>Task Sequence</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>