force-app/main/default/objects/Activity/fields/Thread_Key__c.field-meta.xml
<CustomField>
    <fullName>Thread_Key__c</fullName>
    <externalId>true</externalId>
    <label>Thread Key</label>
    <length>255</length>
    <description>RFC References root Message-ID — conversation threading key. Shared across entire email thread.</description>
    <type>Text</type>
</CustomField>