force-app/main/default/objects/Activity/fields/Transaction_Deal__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Deal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links a fan-out checklist Task to its Transaction without using WhatId, so the checklist stays out of the standard Activity timeline.</description>
    <label>Transaction Deal</label>
    <referenceTo>Transaction__c</referenceTo>
    <relationshipLabel>Checklist Tasks</relationshipLabel>
    <relationshipName>Checklist_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>