force-app/main/default/objects/Activity/fields/Verbal_Verification_Completed__c.field-meta.xml
<CustomField>
    <fullName>Verbal_Verification_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Wire-fraud control: must be true before a wire-verification task can be closed (DPEG brief Section 06).</description>
    <label>Verbal Verification Completed</label>
    <type>Checkbox</type>
</CustomField>