force-app/main/default/objects/Activity/fields/Verification_Phone__c.field-meta.xml
<CustomField>
    <fullName>Verification_Phone__c</fullName>
    <description>Phone number used to verbally verify the wiring instructions (independently looked up, not from the email).</description>
    <label>Verification Phone Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>