force-app/main/default/objects/Activity/fields/Verified_At__c.field-meta.xml
<CustomField>
    <fullName>Verified_At__c</fullName>
    <description>Timestamp the verbal wire verification was logged.</description>
    <label>Verified At</label>
    <type>DateTime</type>
</CustomField>