force-app/main/default/objects/Activity/fields/Verified_By__c.field-meta.xml
<CustomField>
    <fullName>Verified_By__c</fullName>
    <description>Name of the person at the title company / lender who confirmed the wiring instructions by phone.</description>
    <label>Verified By (Name)</label>
    <length>120</length>
    <type>Text</type>
</CustomField>